test/tests/errors/error-record-removed-from-environment2.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    with person do
        age = 22;
    output age;
}